# QuinielaMx

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  README_DEPLOYMENT.md  STREAMLIT_CLOUD.md  docker-compose.yml  package-lock.json  package.json  proxy.ts  pyproject.toml  requirements.txt  streamlit_app.py  tailwind.config.ts
.streamlit/: config.toml  secrets.example.toml  secrets.toml.example
app/: globals.css  layout.tsx  page.tsx  streamlit_app.py
components/: app-shell.tsx  landing-page-view.tsx  login-form.tsx  product-studio.tsx
deploy/: nginx.conf
docs/: deployment.md  streamlit-paypal-github.md
lib/: audit.ts  auth.ts  bitcoin.ts  csv.ts  db.ts  download-links.ts  email.ts  pdf.ts  repository.ts  security.ts  stripe.ts  types.ts  validators.ts
prisma/: schema.prisma  seed.ts
scripts/: create_templates.py  normalize_data.py  push-to-github.ps1
src/: __init__.py
streamlit_src/: __init__.py  openai_ai.py  paypal.py  pdf_delivery.py  product_engine.py  stripe_checkout.py
tests/: generator.test.ts  helpers.py  test_access_control.py  test_active_draws_service.py  test_ai_quiniela_extractor.py  test_ai_runtime_credentials.py  test_auth.py  test_backtesting.py  test_data_connectors.py  test_draw_recommendations.py  test_espn_client.py  test_explanations.py  test_games.py  test_home_dashboard.py  test_local_ocr_extractor.py  test_models.py  test_official_guide_pdf.py  test_optimizer.py  test_prediction_history.py  test_private_by_default.py  test_progol_es_client.py  test_protected_routes.py  test_simulation.py  (+3 more)
(+133 files in other folders)
