[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiniela-predictor-mx"
version = "0.1.0"
description = "Analisis probabilistico y optimizacion de quinielas mexicanas."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
cache_dir = ".pytest_tmp/cache"
